feat(session-workspace): 工作区 API + 会话重命名端点 + 按工作区过滤列表